--- a/Emerald/apps/Test-DOF/CMakeLists.txt
+++ b/Emerald/apps/Test-DOF/CMakeLists.txt
@@ -46,6 +46,10 @@ ADD_EXECUTABLE(TestDOF WIN32 ${AllTestDOFSources} ${GeneralIncludes})
 
 IF (MSVC)
     SET_TARGET_PROPERTIES(TestDOF PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ELSE (MSVC)
+    # Force a 32-bit build
+    SET_TARGET_PROPERTIES(TestDOF PROPERTIES COMPILE_FLAGS "-m32"
+                                             LINK_FLAGS    "-m32")
 ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
