--- a/Emerald/apps/Test-Pipeline/CMakeLists.txt
+++ b/Emerald/apps/Test-Pipeline/CMakeLists.txt
@@ -44,6 +44,10 @@ ADD_EXECUTABLE(TestPipeline WIN32 ${AllTestPipelineSources} ${GeneralIncludes})
 
 IF (MSVC)
     SET_TARGET_PROPERTIES(TestPipeline PROPERTIES LINK_FLAGS "/MANIFEST:NO")
+ELSE (MSVC)
+    # Force a 32-bit build
+    SET_TARGET_PROPERTIES(TestPipeline PROPERTIES COMPILE_FLAGS "-m32"
+                                                  LINK_FLAGS    "-m32")
 ENDIF (MSVC)
 
 SET(EXECUTABLE_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
