Windows: Fixing CMakes for Windows platform

--- a/Emerald/apps/Test-DOF/CMakeLists.txt
+++ b/Emerald/apps/Test-DOF/CMakeLists.txt
@@ -36,7 +36,14 @@ INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/include")
 FILE(GLOB GeneralIncludes "${TestDOF_SOURCE_DIR}/include/*.h")
 FILE(GLOB GeneralSources "${TestDOF_SOURCE_DIR}/src/*.cc")
 
+# Copy the assets. Under VS, we need to copy the data to two different directories, so that
+# the debugging works out of the box..
 FILE(COPY "${TestDOF_SOURCE_DIR}/galileo_probe.hdr" DESTINATION "${EMERALD_BINARY_DIR}/bin/")
+
+IF (MSVC)
+    FILE(COPY "${TestDOF_SOURCE_DIR}/galileo_probe.hdr" DESTINATION "${TestDOF_BINARY_DIR}/")
+ENDIF(MSVC)
+
 
 SET(AllTestDOFSources ${GeneralSources} )
 
