Linux: screen mode enumeration is now implemented

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -256,7 +256,7 @@ ADD_SUBDIRECTORY(apps)
 ADD_SUBDIRECTORY(deps)
 
 IF (NOT MSVC)
-    SET(ADDITIONAL_LIBS pthread)
+    SET(ADDITIONAL_LIBS pthread Xrandr)
 ENDIF (NOT MSVC)
 
 IF (NOT MSVC)
