Adjusted the solution to build under Linux. Does not work correctly et.

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -70,6 +70,8 @@ IF(MSVC)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 
     INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/bass_windows_x86")
+else (MSVC)
+    INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/bass_linux_x86")
 ENDIF(MSVC)
 
 INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/include")
@@ -257,7 +259,7 @@ ADD_SUBDIRECTORY(apps)
 ADD_SUBDIRECTORY(deps)
 
 IF (NOT MSVC)
-    SET(ADDITIONAL_LIBS pthread Xrandr)
+    SET(ADDITIONAL_LIBS pthread Xrandr "${EMERALD_SOURCE_DIR}/deps/bass_linux_x86/libbass.so")
 ELSE (NOT MSVC)
     SET(ADDITIONAL_LIBS "${EMERALD_SOURCE_DIR}/deps/bass_windows_x86/bass.lib")
 ENDIF (NOT MSVC)
