Work in progress

--- a/Emerald/apps/CMakeLists.txt
+++ b/Emerald/apps/CMakeLists.txt
@@ -14,6 +14,7 @@ IF(MSVC)
     ADD_SUBDIRECTORY(LW-AnimationDataExtractor)
     ADD_SUBDIRECTORY(SceneViewer)
     ADD_SUBDIRECTORY(Test-HDR)
+    ADD_SUBDIRECTORY(Test-MarchingCubes)
     ADD_SUBDIRECTORY(Test-ObjectBrowser)
     ADD_SUBDIRECTORY(Test-Particles)
     ADD_SUBDIRECTORY(TextureCompressor)
