Slightly adjusted demo_timeline API; added new Deadline2015 demo project skeleton

--- a/Emerald/apps/CMakeLists.txt
+++ b/Emerald/apps/CMakeLists.txt
@@ -19,6 +19,7 @@ IF(MSVC)
     ADD_SUBDIRECTORY(TextureCompressor)
 ENDIF(MSVC)
 
+ADD_SUBDIRECTORY(Demo-Deadline2015)
 ADD_SUBDIRECTORY(Test-ComputeShaderSSBO)
 ADD_SUBDIRECTORY(Test-DemoApp)
 ADD_SUBDIRECTORY(Test-DOF)
