--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -103,6 +103,10 @@ FILE(GLOB PostProcessingIncludes "${EMERALD_SOURCE_DIR}/include/postprocessing/*
 FILE(GLOB PostProcessingSources  "${EMERALD_SOURCE_DIR}/src/postprocessing/*.cc")
 FILE(GLOB ProceduralIncludes     "${EMERALD_SOURCE_DIR}/include/procedural/*.h")
 FILE(GLOB ProceduralSources      "${EMERALD_SOURCE_DIR}/src/procedural/*.cc")
+FILE(GLOB RAGLIncludes           "${EMERALD_SOURCE_DIR}/include/raGL/*.h")
+FILE(GLOB RAGLSources            "${EMERALD_SOURCE_DIR}/src/raGL/*.cc")
+FILE(GLOB RALIncludes            "${EMERALD_SOURCE_DIR}/include/ral/*.h")
+FILE(GLOB RALSources             "${EMERALD_SOURCE_DIR}/src/ral/*.cc")
 FILE(GLOB ScalarFieldIncludes    "${EMERALD_SOURCE_DIR}/include/scalar_field/*.h")
 FILE(GLOB ScalarFieldSources     "${EMERALD_SOURCE_DIR}/src/scalar_field/*.cc")
 FILE(GLOB SceneIncludes          "${EMERALD_SOURCE_DIR}/include/scene/*.h")
@@ -170,7 +174,9 @@ SET(AllSources
                ${OpenCLSources}
                ${TextureSources}
                ${DemoSources}
-               ${ScalarFieldSources})
+               ${ScalarFieldSources}
+               ${RALSources}
+			   ${RAGLSources})
 
 ADD_MSVC_PRECOMPILED_HEADER("shared.h" "src/shared.cc" AllSources)
 
@@ -210,6 +216,8 @@ ADD_LIBRARY(EMERALD SHARED ${AllSources}
                            ${TextureIncludes}
                            ${DemoIncludes}
                            ${ScalarFieldIncludes}
+                           ${RALIncludes}
+						   ${RAGLIncludes}
                             Emerald.rc)
 
 GENERATE_EXPORT_HEADER(EMERALD
@@ -220,48 +228,52 @@ GENERATE_EXPORT_HEADER(EMERALD
 
 SET(LIBRARY_OUTPUT_PATH ${EMERALD_BINARY_DIR}/bin)
 
-SOURCE_GROUP ("Audio includes"           FILES ${AudioIncludes})
-SOURCE_GROUP ("Audio sources"            FILES ${AudioSources})
-SOURCE_GROUP ("Collada includes"         FILES ${ColladaIncludes})
-SOURCE_GROUP ("Collada sources"          FILES ${ColladaSources})
-SOURCE_GROUP ("Curve Editor includes"    FILES ${CurveEditorIncludes})
-SOURCE_GROUP ("Curve Editor sources"     FILES ${CurveEditorSources})
-SOURCE_GROUP ("Curve includes"           FILES ${CurveIncludes})
-SOURCE_GROUP ("Curve sources"            FILES ${CurveSources})
-SOURCE_GROUP ("Demo includes"            FILES ${DemoIncludes})
-SOURCE_GROUP ("Demo sources"             FILES ${DemoSources})
-SOURCE_GROUP ("General includes"         FILES ${GeneralIncludes})
-SOURCE_GROUP ("General sources"          FILES ${GeneralSources})
-SOURCE_GROUP ("GFX includes"             FILES ${GFXIncludes})
-SOURCE_GROUP ("GFX sources"              FILES ${GFXSources})
-SOURCE_GROUP ("Mesh includes"            FILES ${MeshIncludes})
-SOURCE_GROUP ("Mesh sources"             FILES ${MeshSources})
-SOURCE_GROUP ("Object Manager includes"  FILES ${ObjectManagerIncludes})
-SOURCE_GROUP ("Object Manager sources"   FILES ${ObjectManagerSources})
-SOURCE_GROUP ("OpenCL includes"          FILES ${OpenCLIncludes})
-SOURCE_GROUP ("OpenCL sources"           FILES ${OpenCLSources})
-SOURCE_GROUP ("OpenGL includes"          FILES ${OpenGLIncludes})
-SOURCE_GROUP ("OpenGL sources"           FILES ${OpenGLSources})
-SOURCE_GROUP ("Post-processing includes" FILES ${PostProcessingIncludes})
-SOURCE_GROUP ("Post-processing sources"  FILES ${PostProcessingSources})
-SOURCE_GROUP ("Procedural includes"      FILES ${ProceduralIncludes})
-SOURCE_GROUP ("Procedural sources"       FILES ${ProceduralSources})
-SOURCE_GROUP ("Scalar field includes"    FILES ${ScalarFieldIncludes})
-SOURCE_GROUP ("Scalar field sources"     FILES ${ScalarFieldSources})
-SOURCE_GROUP ("Scene includes"           FILES ${SceneIncludes})
-SOURCE_GROUP ("Scene sources"            FILES ${SceneSources})
-SOURCE_GROUP ("Shaders includes"         FILES ${ShadersIncludes})
-SOURCE_GROUP ("Shaders sources"          FILES ${ShadersSources})
-SOURCE_GROUP ("SH includes"              FILES ${ShIncludes})
-SOURCE_GROUP ("SH sources"               FILES ${ShSources})
-SOURCE_GROUP ("SH Light Editor includes" FILES ${ShLightEditorIncludes})
-SOURCE_GROUP ("SH Light Editor sources"  FILES ${ShLightEditorSources})
-SOURCE_GROUP ("System includes"          FILES ${SystemIncludes})
-SOURCE_GROUP ("System sources"           FILES ${SystemSources})
-SOURCE_GROUP ("Texture includes"         FILES ${TextureIncludes})
-SOURCE_GROUP ("Texture sources"          FILES ${TextureSources})
-SOURCE_GROUP ("Webcam includes"          FILES ${WebcamIncludes})
-SOURCE_GROUP ("Webcam sources"           FILES ${WebcamSources})
+SOURCE_GROUP ("Audio includes"                       		 FILES ${AudioIncludes})
+SOURCE_GROUP ("Audio sources"                        		 FILES ${AudioSources})
+SOURCE_GROUP ("Collada includes"                     		 FILES ${ColladaIncludes})
+SOURCE_GROUP ("Collada sources"                      		 FILES ${ColladaSources})
+SOURCE_GROUP ("Curve Editor includes"                		 FILES ${CurveEditorIncludes})
+SOURCE_GROUP ("Curve Editor sources"                 		 FILES ${CurveEditorSources})
+SOURCE_GROUP ("Curve includes"                       		 FILES ${CurveIncludes})
+SOURCE_GROUP ("Curve sources"                        		 FILES ${CurveSources})
+SOURCE_GROUP ("Demo includes"                        		 FILES ${DemoIncludes})
+SOURCE_GROUP ("Demo sources"                         		 FILES ${DemoSources})
+SOURCE_GROUP ("General includes"                     		 FILES ${GeneralIncludes})
+SOURCE_GROUP ("General sources"                      		 FILES ${GeneralSources})
+SOURCE_GROUP ("GFX includes"                         		 FILES ${GFXIncludes})
+SOURCE_GROUP ("GFX sources"                          		 FILES ${GFXSources})
+SOURCE_GROUP ("Mesh includes"                        		 FILES ${MeshIncludes})
+SOURCE_GROUP ("Mesh sources"                         		 FILES ${MeshSources})
+SOURCE_GROUP ("Object Manager includes"              		 FILES ${ObjectManagerIncludes})
+SOURCE_GROUP ("Object Manager sources"               		 FILES ${ObjectManagerSources})
+SOURCE_GROUP ("OpenCL includes"                      		 FILES ${OpenCLIncludes})
+SOURCE_GROUP ("OpenCL sources"                       		 FILES ${OpenCLSources})
+SOURCE_GROUP ("OpenGL includes"                      		 FILES ${OpenGLIncludes})
+SOURCE_GROUP ("OpenGL sources"                       		 FILES ${OpenGLSources})
+SOURCE_GROUP ("Post-processing includes"             		 FILES ${PostProcessingIncludes})
+SOURCE_GROUP ("Post-processing sources"              		 FILES ${PostProcessingSources})
+SOURCE_GROUP ("Procedural includes"                  		 FILES ${ProceduralIncludes})
+SOURCE_GROUP ("Procedural sources"                   		 FILES ${ProceduralSources})
+SOURCE_GROUP ("Rendering Abstraction Impl includes (OpenGL)" FILES ${RAGLIncludes})
+SOURCE_GROUP ("Rendering Abstraction Impl sources (OpenGL)"  FILES ${RAGLSources})
+SOURCE_GROUP ("Rendering Abstraction Layer includes" 		 FILES ${RALIncludes})
+SOURCE_GROUP ("Rendering Abstraction Layer sources"  		 FILES ${RALSources})
+SOURCE_GROUP ("Scalar field includes"    		     		 FILES ${ScalarFieldIncludes})
+SOURCE_GROUP ("Scalar field sources"     		     		 FILES ${ScalarFieldSources})
+SOURCE_GROUP ("Scene includes"           		     		 FILES ${SceneIncludes})
+SOURCE_GROUP ("Scene sources"            		     		 FILES ${SceneSources})
+SOURCE_GROUP ("Shaders includes"         		     		 FILES ${ShadersIncludes})
+SOURCE_GROUP ("Shaders sources"          		     		 FILES ${ShadersSources})
+SOURCE_GROUP ("SH includes"              		     		 FILES ${ShIncludes})
+SOURCE_GROUP ("SH sources"               		     		 FILES ${ShSources})
+SOURCE_GROUP ("SH Light Editor includes" 		     		 FILES ${ShLightEditorIncludes})
+SOURCE_GROUP ("SH Light Editor sources"  		     		 FILES ${ShLightEditorSources})
+SOURCE_GROUP ("System includes"          		     		 FILES ${SystemIncludes})
+SOURCE_GROUP ("System sources"           		     		 FILES ${SystemSources})
+SOURCE_GROUP ("Texture includes"         		     		 FILES ${TextureIncludes})
+SOURCE_GROUP ("Texture sources"          		     		 FILES ${TextureSources})
+SOURCE_GROUP ("Webcam includes"          		     		 FILES ${WebcamIncludes})
+SOURCE_GROUP ("Webcam sources"           		     		 FILES ${WebcamSources})
 
 FILE          (GLOB   TestSources  "test/*.cc")
 ADD_EXECUTABLE(TEST ${TestSources} "gtest-1.6.0/src/gtest-all.cc")
