Segment graphs: Work in progress

--- a/Emerald/CMakeLists.txt
+++ b/Emerald/CMakeLists.txt
@@ -83,40 +83,42 @@ INCLUDE_DIRECTORIES("${EMERALD_SOURCE_DIR}/deps/zlib-1.2.8")
 INCLUDE_DIRECTORIES("gtest-1.6.0/include")
 INCLUDE_DIRECTORIES("gtest-1.6.0/")
 
-FILE(GLOB AudioIncludes          "${EMERALD_SOURCE_DIR}/include/audio/*.h")
-FILE(GLOB AudioSources           "${EMERALD_SOURCE_DIR}/src/audio/*.cc")
-FILE(GLOB ColladaIncludes        "${EMERALD_SOURCE_DIR}/include/collada/*.h")
-FILE(GLOB ColladaSources         "${EMERALD_SOURCE_DIR}/src/collada/*.cc")
-FILE(GLOB CurveIncludes          "${EMERALD_SOURCE_DIR}/include/curve/*.h")
-FILE(GLOB CurveSources           "${EMERALD_SOURCE_DIR}/src/curve/*.cc")
-FILE(GLOB DemoIncludes           "${EMERALD_SOURCE_DIR}/include/demo/*.h")
-FILE(GLOB DemoSources            "${EMERALD_SOURCE_DIR}/src/demo/*.cc")
-FILE(GLOB GeneralIncludes        "${EMERALD_SOURCE_DIR}/include/*.h")
-FILE(GLOB GeneralSources         "${EMERALD_SOURCE_DIR}/src/main.cc")
-FILE(GLOB GFXIncludes            "${EMERALD_SOURCE_DIR}/include/gfx/*.h")
-FILE(GLOB GFXSources             "${EMERALD_SOURCE_DIR}/src/gfx/*.cc")
-FILE(GLOB MeshIncludes           "${EMERALD_SOURCE_DIR}/include/mesh/*.h")
-FILE(GLOB MeshSources            "${EMERALD_SOURCE_DIR}/src/mesh/*.cc")
-FILE(GLOB OpenGLIncludes         "${EMERALD_SOURCE_DIR}/include/ogl/*.h")
-FILE(GLOB OpenGLSources          "${EMERALD_SOURCE_DIR}/src/ogl/*.cc")
-FILE(GLOB PostProcessingIncludes "${EMERALD_SOURCE_DIR}/include/postprocessing/*.h")
-FILE(GLOB PostProcessingSources  "${EMERALD_SOURCE_DIR}/src/postprocessing/*.cc")
-FILE(GLOB ProceduralIncludes     "${EMERALD_SOURCE_DIR}/include/procedural/*.h")
-FILE(GLOB ProceduralSources      "${EMERALD_SOURCE_DIR}/src/procedural/*.cc")
-FILE(GLOB RAGLIncludes           "${EMERALD_SOURCE_DIR}/include/raGL/*.h")
-FILE(GLOB RAGLSources            "${EMERALD_SOURCE_DIR}/src/raGL/*.cc")
-FILE(GLOB RALIncludes            "${EMERALD_SOURCE_DIR}/include/ral/*.h")
-FILE(GLOB RALSources             "${EMERALD_SOURCE_DIR}/src/ral/*.cc")
-FILE(GLOB ScalarFieldIncludes    "${EMERALD_SOURCE_DIR}/include/scalar_field/*.h")
-FILE(GLOB ScalarFieldSources     "${EMERALD_SOURCE_DIR}/src/scalar_field/*.cc")
-FILE(GLOB SceneIncludes          "${EMERALD_SOURCE_DIR}/include/scene/*.h")
-FILE(GLOB SceneSources           "${EMERALD_SOURCE_DIR}/src/scene/*.cc")
-FILE(GLOB ShadersIncludes        "${EMERALD_SOURCE_DIR}/include/shaders/*.h")
-FILE(GLOB ShadersSources         "${EMERALD_SOURCE_DIR}/src/shaders/*.cc")
-FILE(GLOB SystemIncludes         "${EMERALD_SOURCE_DIR}/include/system/*.h")
-FILE(GLOB SystemSources          "${EMERALD_SOURCE_DIR}/src/system/*.cc")
-FILE(GLOB TextureIncludes        "${EMERALD_SOURCE_DIR}/include/texture/*.h")
-FILE(GLOB TextureSources         "${EMERALD_SOURCE_DIR}/src/texture/*.cc")
+FILE(GLOB AudioIncludes             "${EMERALD_SOURCE_DIR}/include/audio/*.h")
+FILE(GLOB AudioSources              "${EMERALD_SOURCE_DIR}/src/audio/*.cc")
+FILE(GLOB ColladaIncludes           "${EMERALD_SOURCE_DIR}/include/collada/*.h")
+FILE(GLOB ColladaSources            "${EMERALD_SOURCE_DIR}/src/collada/*.cc")
+FILE(GLOB CurveIncludes             "${EMERALD_SOURCE_DIR}/include/curve/*.h")
+FILE(GLOB CurveSources              "${EMERALD_SOURCE_DIR}/src/curve/*.cc")
+FILE(GLOB DemoIncludes              "${EMERALD_SOURCE_DIR}/include/demo/*.h")
+FILE(GLOB DemoSources               "${EMERALD_SOURCE_DIR}/src/demo/*.cc")
+FILE(GLOB DemoTimelineNodesIncludes "${EMERALD_SOURCE_DIR}/include/demo/nodes/*.h")
+FILE(GLOB DemoTimelineNodesSources  "${EMERALD_SOURCE_DIR}/src/demo/nodes/*.cc")
+FILE(GLOB GeneralIncludes           "${EMERALD_SOURCE_DIR}/include/*.h")
+FILE(GLOB GeneralSources            "${EMERALD_SOURCE_DIR}/src/main.cc")
+FILE(GLOB GFXIncludes               "${EMERALD_SOURCE_DIR}/include/gfx/*.h")
+FILE(GLOB GFXSources                "${EMERALD_SOURCE_DIR}/src/gfx/*.cc")
+FILE(GLOB MeshIncludes              "${EMERALD_SOURCE_DIR}/include/mesh/*.h")
+FILE(GLOB MeshSources               "${EMERALD_SOURCE_DIR}/src/mesh/*.cc")
+FILE(GLOB OpenGLIncludes            "${EMERALD_SOURCE_DIR}/include/ogl/*.h")
+FILE(GLOB OpenGLSources             "${EMERALD_SOURCE_DIR}/src/ogl/*.cc")
+FILE(GLOB PostProcessingIncludes    "${EMERALD_SOURCE_DIR}/include/postprocessing/*.h")
+FILE(GLOB PostProcessingSources     "${EMERALD_SOURCE_DIR}/src/postprocessing/*.cc")
+FILE(GLOB ProceduralIncludes        "${EMERALD_SOURCE_DIR}/include/procedural/*.h")
+FILE(GLOB ProceduralSources         "${EMERALD_SOURCE_DIR}/src/procedural/*.cc")
+FILE(GLOB RAGLIncludes              "${EMERALD_SOURCE_DIR}/include/raGL/*.h")
+FILE(GLOB RAGLSources               "${EMERALD_SOURCE_DIR}/src/raGL/*.cc")
+FILE(GLOB RALIncludes               "${EMERALD_SOURCE_DIR}/include/ral/*.h")
+FILE(GLOB RALSources                "${EMERALD_SOURCE_DIR}/src/ral/*.cc")
+FILE(GLOB ScalarFieldIncludes       "${EMERALD_SOURCE_DIR}/include/scalar_field/*.h")
+FILE(GLOB ScalarFieldSources        "${EMERALD_SOURCE_DIR}/src/scalar_field/*.cc")
+FILE(GLOB SceneIncludes             "${EMERALD_SOURCE_DIR}/include/scene/*.h")
+FILE(GLOB SceneSources              "${EMERALD_SOURCE_DIR}/src/scene/*.cc")
+FILE(GLOB ShadersIncludes           "${EMERALD_SOURCE_DIR}/include/shaders/*.h")
+FILE(GLOB ShadersSources            "${EMERALD_SOURCE_DIR}/src/shaders/*.cc")
+FILE(GLOB SystemIncludes            "${EMERALD_SOURCE_DIR}/include/system/*.h")
+FILE(GLOB SystemSources             "${EMERALD_SOURCE_DIR}/src/system/*.cc")
+FILE(GLOB TextureIncludes           "${EMERALD_SOURCE_DIR}/include/texture/*.h")
+FILE(GLOB TextureSources            "${EMERALD_SOURCE_DIR}/src/texture/*.cc")
 
 IF (INCLUDE_WEBCAM_MANAGER)
     FILE(GLOB WebcamIncludes "${EMERALD_SOURCE_DIR}/include/webcam/*.h")
@@ -174,6 +176,7 @@ SET(AllSources
                ${OpenCLSources}
                ${TextureSources}
                ${DemoSources}
+			   ${DemoTimelineNodesSources}
                ${ScalarFieldSources}
                ${RALSources}
 			   ${RAGLSources})
@@ -215,6 +218,7 @@ ADD_LIBRARY(EMERALD SHARED ${AllSources}
                            ${OpenCLIncludes}
                            ${TextureIncludes}
                            ${DemoIncludes}
+						   ${DemoTimelineNodesIncludes}
                            ${ScalarFieldIncludes}
                            ${RALIncludes}
 						   ${RAGLIncludes}
@@ -238,6 +242,8 @@ SOURCE_GROUP ("Curve includes"                       		 FILES ${CurveIncludes})
 SOURCE_GROUP ("Curve sources"                        		 FILES ${CurveSources})
 SOURCE_GROUP ("Demo includes"                        		 FILES ${DemoIncludes})
 SOURCE_GROUP ("Demo sources"                         		 FILES ${DemoSources})
+SOURCE_GROUP ("Demo timeline nodes includes"			     FILES ${DemoTimelineNodesIncludes})
+SOURCE_GROUP ("Demo timeline nodes sources"                  FILES ${DemoTimelineNodesSources})
 SOURCE_GROUP ("General includes"                     		 FILES ${GeneralIncludes})
 SOURCE_GROUP ("General sources"                      		 FILES ${GeneralSources})
 SOURCE_GROUP ("GFX includes"                         		 FILES ${GFXIncludes})
